src/test/ui/const-generics/generic_const_exprs/simple_fail.stderr
error[E0080]: evaluation of `test::<0_usize>::{constant#0}` failed
  --> $DIR/simple_fail.rs:7:48
   |
LL | fn test<const N: usize>() -> Arr<N> where [u8; N - 1]: Sized {
   |                                                ^^^^^ attempt to compute `0_usize - 1_usize`, which would overflow

error: failed to evaluate the given constant
  --> $DIR/simple_fail.rs:13:5
   |
LL |     test::<0>();
   |     ^^^^^^^^^
   |
note: required by a bound in `test`
  --> $DIR/simple_fail.rs:7:48
   |
LL | fn test<const N: usize>() -> Arr<N> where [u8; N - 1]: Sized {
   |                                                ^^^^^ required by this bound in `test`

error[E0080]: evaluation of `Arr::<0_usize>::{constant#0}` failed
  --> $DIR/simple_fail.rs:4:33
   |
LL | type Arr<const N: usize> = [u8; N - 1];
   |                                 ^^^^^ attempt to compute `0_usize - 1_usize`, which would overflow

error: failed to evaluate the given constant
  --> $DIR/simple_fail.rs:13:5
   |
LL |     test::<0>();
   |     ^^^^^^^^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0080`.
